[package]
name = "es-test"
version = "0.1.0"
authors = ["Nguyen Quoc Ngoc Tuong <tuongn09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsourcing = "*"
chrono = "*"
uuid = { version = "*", features = [ "serde", "v4" ] }